--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "postbuild": "cp dist/index.html dist/200.html",
-    "preview": "vite preview",
-    "start": "node server/index.cjs"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
-    "@google/genai": "^1.41.0",
     "lucide-react": "^0.568.0",
-    "express": "^4.18.2"
+    
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
