--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
-    "lucide-react": "^0.568.0",
-    
+    "lucide-react": "^0.568.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
